# ktwo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static-checks.yml
examples/mathfunc/: config_advanced_scipy.yml  plan.yml  sequential.yml  show_results.py
examples/rosenbrock/: config_rosenbrock.yml  functions.py  nested.yml  plan.yml  repeat.yml
examples/rosenbrock/jobs/: REPORT  rosenbrock.py
src/ktwo/: __init__.py  _functions.py  _optimizer.py  _parse_config.py  _plugins.py  _report.py  _results_table.py  _run_model.py  _update_config.py  _utils.py  _workflow_job.py  main.py  plugins.py
